Fix overflow
This fixes horizontal scrolling on _all_ devices.
Also, images should be visible in full so max height should be limited.

--- a/assets/_style.sass
+++ b/assets/_style.sass
@@ -35,8 +35,9 @@ a:hover,
 .page.page_job
   img
     max-width: 80vw
+    max-height: 90vh
     transform: translateX(-50%)
-    margin-left: 50%
+    left: 50%
 
     @media (max-width: 50rem)
       max-width: calc(100vw - 2rem)
